1完成初步测试。groundcolor还没计算。
2 cpu单线程太慢，尝试加入多线程或者fiber

--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -390,6 +390,9 @@
     <ClInclude Include="SDK\minpng.h">
       <Filter>SDK</Filter>
     </ClInclude>
+    <ClInclude Include="SDK\coroutine.h">
+      <Filter>SDK</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
