--- a/Apollo/Apollo.vcxproj
+++ b/Apollo/Apollo.vcxproj
@@ -249,6 +249,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClInclude Include="Sample\SkySample.h" />
     <ClInclude Include="Sample\TestSample.h" />
     <ClInclude Include="Scene\SceneNode.h" />
+    <ClInclude Include="SDK\coroutine.h" />
     <ClInclude Include="SDK\minpng.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
