--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -396,6 +396,9 @@
     <ClInclude Include="SDK\coroutine.h">
       <Filter>SDK</Filter>
     </ClInclude>
+    <ClInclude Include="Environment\Atmosphere\Reference\Model.h">
+      <Filter>Environment\Atmosphere\Reference</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -622,6 +625,9 @@
     </ClCompile>
     <ClCompile Include="Thread\Thread_CaseTest.cpp">
       <Filter>Thread</Filter>
+    </ClCompile>
+    <ClCompile Include="Environment\Atmosphere\Reference\Model.cpp">
+      <Filter>Environment\Atmosphere\Reference</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
