--- a/Apollo/Apollo.vcxproj
+++ b/Apollo/Apollo.vcxproj
@@ -220,6 +220,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClInclude Include="Environment\Atmosphere\Reference\Functions.h" />
     <ClInclude Include="Environment\Atmosphere\Reference\Model.h" />
     <ClInclude Include="Environment\Atmosphere\Reference\SkyRenderCPUTest.h" />
+    <ClInclude Include="Environment\Atmosphere\Reference\SkyRenderGPUTest.h" />
     <ClInclude Include="Graphics\AABB.h" />
     <ClInclude Include="Graphics\Camera.h" />
     <ClInclude Include="Graphics\ClearRenderTargetPass.h" />
@@ -320,6 +321,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClCompile Include="Environment\Atmosphere\Reference\Model.cpp" />
     <ClCompile Include="Environment\Atmosphere\Reference\Model_Test.cpp" />
     <ClCompile Include="Environment\Atmosphere\Reference\SkyRenderCPUTest.cpp" />
+    <ClCompile Include="Environment\Atmosphere\Reference\SkyRenderGPUTest.cpp" />
     <ClCompile Include="Graphics\AABB.cpp" />
     <ClCompile Include="Graphics\Camera.cpp" />
     <ClCompile Include="Graphics\ClearRenderTargetPass.cpp" />
