--- a/Apollo/Apollo.vcxproj
+++ b/Apollo/Apollo.vcxproj
@@ -221,6 +221,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClInclude Include="Environment\Atmosphere\Reference\Model.h" />
     <ClInclude Include="Environment\Atmosphere\Reference\SkyRenderCPUTest.h" />
     <ClInclude Include="Environment\Atmosphere\Reference\SkyRenderGPUTest.h" />
+    <ClInclude Include="Environment\Atmosphere\Reference\SkyRenderTest.h" />
     <ClInclude Include="Graphics\AABB.h" />
     <ClInclude Include="Graphics\Camera.h" />
     <ClInclude Include="Graphics\ClearRenderTargetPass.h" />
@@ -322,6 +323,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClCompile Include="Environment\Atmosphere\Reference\Model_Test.cpp" />
     <ClCompile Include="Environment\Atmosphere\Reference\SkyRenderCPUTest.cpp" />
     <ClCompile Include="Environment\Atmosphere\Reference\SkyRenderGPUTest.cpp" />
+    <ClCompile Include="Environment\Atmosphere\Reference\SkyRenderTest.cpp" />
     <ClCompile Include="Graphics\AABB.cpp" />
     <ClCompile Include="Graphics\Camera.cpp" />
     <ClCompile Include="Graphics\ClearRenderTargetPass.cpp" />
