--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -411,6 +411,9 @@
     <ClInclude Include="Environment\Atmosphere\Reference\SkyRenderGPUTest.h">
       <Filter>Environment\Atmosphere\Reference</Filter>
     </ClInclude>
+    <ClInclude Include="Environment\Atmosphere\Reference\SkyRenderTest.h">
+      <Filter>Environment\Atmosphere\Reference</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -651,6 +654,9 @@
       <Filter>Dx11</Filter>
     </ClCompile>
     <ClCompile Include="Environment\Atmosphere\Reference\SkyRenderGPUTest.cpp">
+      <Filter>Environment\Atmosphere\Reference</Filter>
+    </ClCompile>
+    <ClCompile Include="Environment\Atmosphere\Reference\SkyRenderTest.cpp">
       <Filter>Environment\Atmosphere\Reference</Filter>
     </ClCompile>
   </ItemGroup>
