--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -438,6 +438,9 @@
     <ClInclude Include="Sample\SpringParticleSample.h">
       <Filter>Sample</Filter>
     </ClInclude>
+    <ClInclude Include="Graphics\GeometryGenerator.h">
+      <Filter>Graphics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -700,6 +703,9 @@
     </ClCompile>
     <ClCompile Include="Sample\SpringParticleSample.cpp">
       <Filter>Sample</Filter>
+    </ClCompile>
+    <ClCompile Include="Graphics\GeometryGenerator.cpp">
+      <Filter>Graphics</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
